2020-02-13  Carlo Caione  <ccaione@baylibre.com>

	* doc/poke.texi: add documentation
	* src/pk-set.c: new set oacutoff command
	* testsuite/poke.cmd/set-oacutoff.pk: new test file
	* src/pvm.c: helpers to retrieve oacutoff flag
	* src/pvm.h: likewise
	* src/pvm.jitter: new flag in the PVM state struct
	* src/pvm-val.c: support new array cutoff parameter

2020-02-13  Jose E. Marchesi  <jemarch@gnu.org>

	* src/poke.c (initialize): Initialize the hyperserver only if poke
	is used interactively.
	(finalize): Ditto for finalize.

2020-02-13  Jose E. Marchesi  <jemarch@gnu.org>

	* src/ras (pop_frame): Fix typo.

2020-02-13  Jose E. Marchesi  <jemarch@gnu.org>

	* HACKING (Write After Approval): Added Carlo Caione.
	* AUTHORS: Likewise.

2020-02-13  Carlo Caione  <ccaione@baylibre.com>

	* testsuite/poke.cmd/set-odepth.pk: new test
	* testsuite/poke.cmd/set-oindent.pk: likewise
	* testsuite/poke.cmd/set-odepth.pk: likewise
	* src/pvm.jitter: new flags in the PVM state struct
	* src/pvm.c: helpers to retrieve tree-related flags
	* src/pvm.h: likewise
	* src/pvm-val.c: support new printing modes
	* src/pk-term.c: new function to print indentation
	* src/pk-term.h: likewise
	* src/pk-set.c: new .set sub-commands
	* doc/poke.texi: updated documentation

2020-02-13  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-tab.y (load_module): Try to load modules from both
	poke_datadir and poke_picklesdir.
	* src/pk-cmd.c (pk_cmd_init): Do not load commands written in Poke
	from C.  Do it in pk-cmd.pk instead.
	* src/pk-cmd.pk: Load commands written in Poke.

2020-02-13  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-tab.y (load): Add a LOAD STRING syntactic variant.
	(load_module): Get a filename_p argument.
	* doc/poke.texi (Modules): Document the alternate syntax for
	`load'.
	* testsuite/poke.pkl/load-4.pk: New test.
	* testsuite/poke.pkl/load-diag-2.pk: Likewise.

2020-02-13  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/funcall-3.pk: Split from funcall.pk.